# OmniDeck

./: .gitignore  CLAUDE.md  LOG_REFACTOR_PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-agent-app.yml
agent/: go.mod  go.sum  package.json  tsconfig.json
agent-app/: index.html  package.json  tsconfig.json  vite.config.ts
agent-app/scripts/: build-sidecar.sh
agent-app/src/: App.tsx  PairingDialog.tsx  hubUrl.ts
agent-app/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
agent-app/src-tauri/capabilities/: default.json
agent-app/src-tauri/icons/: icon.icns
agent-app/src-tauri/src/: credentials.rs  lib.rs  main.rs  platform_mac.rs  sidecar.rs  tray.rs
agent/src/: agent.ts  config-dir.ts  credentials.ts  index.ts  logger.ts  mdns-resolver.ts  state-cache.ts
config-examples/minimal/: main.yaml
config-examples/multi-pc/: main.yaml  secrets.yaml.example
deploy/: install.sh  nm-dnsmasq-shared-omnideck.conf  omnideck-hub.service  omnideck-nmcli.sudoers  omnideck-setup-fallback.service
deploy/udev/: 50-omnideck.rules  50-stream-deck.rules
docs/: ARCHITECTURE.md  PLAN-button-config-ui.md  README.md  configuration.md  getting-started.md  how-it-works.md  plugin-guide.md  plugin-install.md  secrets.md
hub/: package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
hub/scripts/: hash-password.ts
hub/src/: hub.ts  index.ts  logger.ts
hub/web/: .gitignore  (+6 more)
plugins/: zoom
scripts/: build-agent.sh  build-plugins.sh  dev-hub.sh  install.sh  omnideck-wifi-fallback.sh  pi-setup.sh
(+247 files in other folders)
