[package]
name = "omnideck-agent-app"
version = "0.4.0"
description = "OmniDeck Agent desktop application"
edition = "2021"

[lib]
name = "omnideck_agent_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSAppleScript", "NSDictionary", "NSValue"] }
core-graphics = "0.24"
